objects/X1Y_Satisfaction_Survey_Result__c.object
<CustomObject>
    <fields>
        <fullName>System_kW__c</fullName>
        <label>System kW</label>
        <picklist>
            <picklistValues>
                <fullName>1 - 2.9 kW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - 3.9 kW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - 4.9 kW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - 5.9 kW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 - 6.9 kW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 - 7.9 kW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 - 8.9 kW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 - 9.9 kW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 - 11.9 kW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 - 13.9 kW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14 - 15.9 kW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16 - 19.9 kW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; 20 kW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>System_performance__c</fullName>
        <label>System performance</label>
        <picklist>
            <picklistValues>
                <fullName>Very Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Unsatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tariff_Expectation_Comments_EN__c</fullName>
        <description>English translation.</description>
        <label>Tariff Expectation Comments - EN </label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tariff_Expectation_Comments__c</fullName>
        <label>Tariff Expectation Comments</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Theater__c</fullName>
        <label>Theater</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_in_Home__c</fullName>
        <label>Time in Home</label>
        <picklist>
            <picklistValues>
                <fullName>Less than 1 year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-2 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-4 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-7 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8-10 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11-15 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 15 years</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Time_of_Use__c</fullName>
        <label>Time of Use</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Sure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Warranty_Terms__c</fullName>
        <label>Warranty Terms</label>
        <picklist>
            <picklistValues>
                <fullName>Very Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Unsatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>of_Calls__c</fullName>
        <label># of Calls</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 or more</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>of_Homes_Purchase__c</fullName>
        <label># of Homes Purchased</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 or more</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>of_Panels__c</fullName>
        <label># of Panels</label>
        <picklist>
            <picklistValues>
                <fullName>1 - 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 - 15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16 - 20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21 - 25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26 - 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>31 - 35</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36 - 40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>41 - 50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51 - 60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; 60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>1Y Satisfaction Survey Result</label>
    <nameField>
        <displayFormat>SR-{00000}</displayFormat>
        <label>Survey Result Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>1Y Satisfaction Survey Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>